# imgui_app_template

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  NodeEditor.json  README.MD
example/: CMakeLists.txt  entry_point.cpp  net_test.cpp  test_code.cpp
example/imgui_widgets/: calendar.cpp  calendar.hpp
example/pages/: node_editor_page.cpp  page_base.cpp  page_base.hpp  simple_page.cpp
framework/: CMakeLists.txt  config.h
framework/app/: entry_point.hpp  font_config.hpp  main.cpp
framework/core/: log.cpp  log.hpp  macros.h
framework/utils/: AES.h  asset_util.cpp  crash_handler.cpp  crash_handler.hpp  hash_utils.hpp  io_tools.cpp  path_tools.cpp  path_tools.hpp  pmparser.c  pmparser.h  proc_utils.cpp  proc_utils.hpp  pugiconfig.hpp  safe_value.hpp  string_utils.cpp  string_utils.hpp
include/: fw_export.h  imgui_config_user.h
resources/: CMakeLists.txt  README.MD
src/: CMakeLists.txt  config.h  entry_point.cpp  test_code.cpp
src/app/: application.cpp  application.hpp  main.cpp
src/core/: assert.hpp  log.cpp  log.hpp  log_store.cpp  log_store.hpp
src/imgui/utils/: dock_helpers.cpp  dock_helpers.hpp  gl_utils.hpp  glad.c  glad.h
src/imgui/widgets/: ImFileDialog.cpp  ImFileDialog.h  ImGuiUtils.cpp  ImGuiUtils.h  calendar.cpp  calendar.hpp  imgui-knobs.cpp  imgui-knobs.h  imgui_ext.cpp  imgui_ext.hpp  imgui_memory_editor.h  imgui_notify.cpp  imgui_notify.h  sys_log_view.cpp  sys_log_view.hpp  texture.cpp  texture.h
src/job/: job_system.cpp  job_system.hpp  job_system_p.cpp  job_system_p.hpp
src/net/: http_tools.cpp  http_tools.hpp
src/utils/: AES.cpp  AES.h  asset_util.cpp  asset_util.h  backward.hpp  io_tools.cpp  io_tools.hpp  path_tools.cpp  path_tools.hpp  proc_utils.cpp  proc_utils.hpp  pugiconfig.hpp  pugixml.cpp  pugixml.hpp  singleton.hpp  string_utils.cpp  string_utils.hpp  subprocess.hpp  win32_utility.hpp
